# Probabilistic-Programming-and-Bayesian-Methods-for-Hackers

./: .gitignore  Dockerfile  Makefile  pyproject.toml
Chapter1_Introduction/: Ch1_Introduction_NumPyro.ipynb
Chapter2_MorePyMC/: Ch2_MorePyMC_NumPyro.ipynb
Chapter3_MCMC/: Ch3_IntroMCMC_NumPyro.ipynb
Chapter4_TheGreatestTheoremNeverTold/: Ch4_LawOfLargeNumbers_NumPyro.ipynb
Chapter5_LossFunctions/: Ch5_LossFunctions_NumPyro.ipynb
Chapter6_Priorities/: Ch6_Priors_NumPyro.ipynb  stock_closes.csv
